# child_poverty_iraq

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0_mv_load-adm0-data.ipynb  1.0_select-pca-components.ipynb  1.1_mv_irq-mics-eda.ipynb  1.2_mv_load-adm1-data.ipynb  1.3_mv_load-adm2-data.ipynb  1.4_mv_load-adm3-data.ipynb  2.0_model-deprived-mod.ipynb  2.0_mv_model-deprived-sev.ipynb  2.1_model-sumpoor-mod.ipynb  2.2_model-sanitation-mod.ipynb  2.3_model-water-mod.ipynb
src/child_poverty_iraq/data/: load_data.py
src/child_poverty_iraq/models/: evaluate_model.py  predict_model.py  train_model.py
src/child_poverty_iraq/utils/: constants.py  general.py
