[metadata]
name = child_poverty_iraq
version = 0.0.1
description = Micro-projections of multi-dimensional child poverty in Iraq.
; long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
; keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

; install_requires =
;     requests
;     importlib-metadata; python_version<"3.8"

; [options.entry_points]
; console_scripts =
;     executable-name = stc_unicef_cpi.module:function
